# practice

./: .gitignore  Jenkinsfile  README.md  convert_content_lowercase.py
application/: CMakeLists.txt
application/extra/: info.txt
application/extra/tool/: build.py
application/inc/: armstrong.h
application/src/: armstrong.c  bad.c  bye.c  hello.c  main.c
python_scripts/: day_detail.py  find_files.py  find_lengthy_filename.py  find_lengthy_filename_dataovebound.py  hckr_rnk_prct.py  hckr_rnk_ref.py  helper.py  mockt.py  mytest.py  passwordchecker.py  simply.py  skill_test.py  testing.py  testinhar.py  thread_handling.py  thread_multiprocceessing.py
tools/git/: gitconfig.txt
tools/jenkins/: Jenkinsfile
